--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 - 👋 Hi, I’m @pabloh25
-- 👀 I’m interested in Programming and information security
+- 👀 I’m interested in Programming and Manager of projects
 - 🌱 I’m currently learning JavaScript.
 - 💞️ I’m looking to collaborate on social development projects and remote jobs
 - 📫 How to reach me linkedIn https://www.linkedin.com/in/pablohenrique-sup-dev
